# pdas

./: CMakeLists.txt  README.md
2wgs/: a5022wgs  a5022wgs.f90  hab2wgs.f90  readme1.txt  readme2.txt  readme3.txt  readme4.txt  swb.wgs  tnd4211.inp  tnd7505.inp  wb2wgs  wb2wgs.f90  wd2wgs  wd2wgs.f90  wdcase1.inp  wdcase1.wgs
3view/: 3view  3view.dbg  3view.f90  3view.fig  3view.tmp  plan.gnu  readme.txt  rear.gnu  side.gnu  tnd4211.wgs  tnd7505.wgs  wbf.wgs
atmos/: at62.for  atmos76.f90  atmtabs.html  bb.f90  bigtable.f90  coesa.txt  language.txt  press.dpr  readme.txt  si1.prt  si2.prt  tables.bas  tables.c  tables.cpp  tables.dpr  tables.f90  tables.for  tables.java  tables.py  tablesHTML.f90  uasa2000.dpr  uasa2000.pas  us1.prt  us2.prt  ussa1976.dpr  ussa1976.pas
hlp/: arc12721.txt  dpr.xls  drh.cmn  ex1.wgs  ex2.wgs  ex3.wgs  ex4.wgs  ex4pod1.wgs  f16xl.wgs  hlp  hlp.f90  hlp.fig  hlp.gnu  hlp.ps  input.txt  readme.txt  tnd4211.wgs
panair/: agps  arc11398.txt  btac.inp  clean502.bat  clean502.sh  ellip.inp  ffm  ffmf  fmgp  fort.88  nac6.inp  panair  panair.err  panair.f90  ppbc.inp  readme.txt  rwms01  rwms02  rwms03  rwms04  rwms15  rwms19  rwms24  rwms26  rwms28  rwms49  rwms68  swb.inp  vbc.inp  vepd.inp  vss.inp
panin/: case1a.aux  case1a.inp  case1a.wgs  input.txt  panin  panin.dbg  panin.f90  readme.txt
vrml/: readme.txt  tnd4211.wrl  tnd7505.wgs  tnd7505.wrl  wdcase1.wrl  wgs2wrl  wgs2wrl.f90
